--- a/package.properties
+++ b/package.properties
@@ -1,3 +1,3 @@
 #Written by the OOEclipseIntegration
-#Tue Apr 05 17:56:37 CEST 2016
-contents=description, description/desc_en.txt
+#Wed Apr 06 16:28:26 CEST 2016
+contents=description, description/desc_en.txt, images, images/actionOne_16.png, images/actionOne_26.png, registry, registry/org, registry/org/openoffice, registry/org/openoffice/Office, registry/org/openoffice/Office/Accelerators.xcu, registry/org/openoffice/Office/Addons.xcu, registry/org/openoffice/Office/UI, registry/org/openoffice/Office/UI/WriterWindowState.xcu
